# goit-pythoncourse-finalproject

./: .gitignore  README.md  cli.py  command_parser.py  contacts.json  contacts_manager.py  notes.json  notes_manager.py  pyproject.toml  requirements.txt  storage.py  validation.py
personal_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: cli.py  command_parser.py  contacts.json  contacts_manager.py  notes_manager.py
venv_fp/: pyvenv.cfg
